# TextParser

./: .gitignore  CMakeLists.txt  README.md  thougths.txt
src/: Trie.cpp  Trie.hpp  main.cpp
